tests/badly_positioned_polyt/badly_positioned_polyt.exp
Error ---------------------------------------------------------------------------------------------- concretize.js:10:16

Cannot create `C1` element because `EventTarget` [1] is incompatible with `C1` [2] in type argument `T` [3] of the first
parameter of property `onKeyDown`. [incompatible-type-arg]

   concretize.js:10:16
   10| <C1 onKeyDown={_onKeyDown} />;
                      ^^^^^^^^^^

References:
   <BUILTINS>/react-dom.js:74:56
   74| declare class SyntheticKeyboardEvent<+T: EventTarget = EventTarget>
                                                              ^^^^^^^^^^^ [1]
   concretize.js:9:47
    9| function _onKeyDown(e: SyntheticKeyboardEvent<C1>): void {};
                                                     ^^ [2]
   <BUILTINS>/react-dom.js:74:39
   74| declare class SyntheticKeyboardEvent<+T: EventTarget = EventTarget>
                                             ^ [3]


Error ---------------------------------------------------------------------------------------------- concretize.js:10:16

Cannot create `C1` element because `EventTarget` [1] is incompatible with `C1` [2] in type argument `T` of the first
parameter of property `onKeyDown`. [incompatible-type-arg]

   concretize.js:10:16
   10| <C1 onKeyDown={_onKeyDown} />;
                      ^^^^^^^^^^

References:
   <BUILTINS>/react-dom.js:74:42
   74| declare class SyntheticKeyboardEvent<+T: EventTarget = EventTarget>
                                                ^^^^^^^^^^^ [1]
   concretize.js:9:47
    9| function _onKeyDown(e: SyntheticKeyboardEvent<C1>): void {};
                                                     ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:2

Cannot create `Foo` element because undefined property `context` [1] is incompatible with object type [2] in type
argument `Context`. [incompatible-type-arg]

   test.js:23:2
   23| <Foo x={props.t} />;
        ^^^

References:
   test.js:17:10
   17|   Props: {},
                ^^ [1]
   test.js:18:12
   18|   Context: {},
                  ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:2

Cannot create `Bar` element because undefined property `context` [1] is incompatible with object type [2] in type
argument `Context`. [incompatible-type-arg]

   test.js:35:2
   35| <Bar y={props.t} />;
        ^^^

References:
   test.js:29:10
   29|   Props: {},
                ^^ [1]
   test.js:30:12
   30|   Context: {},
                  ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:9

Cannot create `Bar` element because `T` [1] is incompatible with object type [2] in type argument `Props`.
[incompatible-type-arg]

   test.js:35:9
   35| <Bar y={props.t} />;
               ^^^^^^^

References:
   test.js:6:18
    6| type Props = {t: T};
                        ^ [1]
   test.js:29:10
   29|   Props: {},
                ^^ [2]



Found 5 errors
